# computer_vision_intro

./: .gitignore
01-Bayer/: bayer.py  run_script.py
02-Prokudin/: align.py  run_script.py
03-Seam/: seam_carve.py
05-Signs/: fit_and_classify.py  notify.py  parameter_choice.ipynb  run_script.py  street_signs.ipynb  tgbot.py
06-Faces/: detection.py  google_colab_faces_cv.ipynb  learning.ipynb  prepare_data.ipynb  run_script.py
07-Backprop/: common.py  solution.py
08-Birds/: birds.ipynb  classification.py  google_colab_birds_cv.ipynb  run_script.py
09-Cars/: cars_cv.ipynb  detection_and_metrics.py
10-BirdsSegmentation/: birds-segmentation.ipynb  google-colab-birds-segmentation.ipynb  run.py  segmentation.py
11-Tracking/: cross_correlation.py  detection.py  metrics.py  tracker.py
12-SLAM/: estimate_trajectory.py  generate_point_cloud.py  main.cpp  run.py
12-SLAM/common/: absolute_translational_error.py  dataset.py  intrinsics.py  point_cloud.py  relative_pose_error.py  testing.py  trajectory.py
12-SLAM/cpp/: CMakeLists.txt
12-SLAM/cpp/ACMake/: FindG2O.cmake
